jenkins-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jenkins-master-deploy
  labels:
      app: jenkins-master
      version: latest
      group: jenkins
  namespace: jenkins
spec:
  replicas: 1
  selector:
      matchLabels:
          app: jenkins-master
          version: latest
          group: jenkins 
  template:
    metadata:
      labels:
        app: jenkins-master
        version: latest
        group: jenkins
    spec:
      containers:
        - name: jenkins-master
          #image: test_cal/cit-jenkins-image:1.0
          #image: jenkins-master:latest
          image: idur69/jenkins-master:latest
          imagePullPolicy: IfNotPresent
          ports:
            - name: http-port
              containerPort: 8080
            - name: jnlp-port
              containerPort: 50000
          volumeMounts:
            - name: jenkins-home
              mountPath: /var/jenkins_home
      volumes:
        - name: jenkins-home
          emptyDir: {}
        - name: docker-sock-volume
          hostPath:
              path: /var/run/docker.sock
