jenkins-service.yaml
apiVersion: v1
kind: Service
metadata:
    name: jenkins-master-slb
    labels:
        app: jenkins-master
        version: latest
        group: jenkins
    namespace: jenkins
spec:
    type: LoadBalancer

    ports:
    - name: http
      port: 8080
      targetPort: 8080
      protocol: TCP
    selector:
        app: jenkins-master


---
apiVersion: v1
kind: Service
metadata:
    name: jenkins-master-jnlp
    labels:
        app: jenkins-master
        version: latest
        group: jenkins
    namespace: jenkins
spec:
    type: ClusterIP
    ports:
    - name: jnlp
      port: 50000
      targetPort: 50000
      protocol: TCP
      name: slave
    selector:
        app: jenkins-master
