jenkins-deployment_bkp.yaml
---
apiVersion: "v1"
kind: "List"
items:
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    name: "jenkins-master-deployment"
    labels: 
      app: jenkins-master
      version: "latest"
      group: "jenkins"
    namespace: "jenkins"
  spec:
    replicas: 1
    selector:
        matchLabels:
          app: "jenkins-master"
          version: "latest"
          group: "jenkins"
    template:
      metadata:
        labels:
          app: jenkins-master
          version: "latest"
          group: "jenkins"
      spec:
        containers:
          - name: "jenkins-master"
            #image: "keaz/jenkins-master:alpine"
            image: idur69/jenkins-master:latest
            imagePullPolicy: "IfNotPresent"
            ports:
              - name: http-port
                containerPort: 8080
              - name: jnlp-port
                containerPort: 50000
            volumeMounts:
              - name: jenkins-home
                mountPath: "/var/jenkins_home"
        volumes:
        - name: jenkins-home
          emptyDir: {}
        - name: docker-sock-volume
          hostPath:
              path: /var/run/docker.sock
              
- apiVersion: "v1"
  kind: "Service"
  metadata:
    labels:
      app: "jenkins-master"
      version: "latest"
      group: "jenkins"
    namespace: "jenkins"
    name: "jenkins-master-service"
  spec:
    ports:
    - name: "http"
      port: 80
      targetPort: 8080
    - name: "jnlp"
      port: 50000
      targetPort: 50000
    selector:
      app: "jenkins-master"
      version: "latest"
      group: "jenkins"
    type: "ClusterIP"      
- apiVersion: "extensions/v1beta1"
  kind: "Ingress"
  metadata:
    labels:
      app: "jenkins-master"
      version: "latest"
      group: "jenkins"
    namespace: "jenkins"
    name: "jenkins-master-ingress"
  spec:
    rules:
    - host: "jenkins"
      http:
        paths:
        - backend:
            serviceName: "jenkins-master-service"
            servicePort: 80
          path: "/"
